Thu Dec 20 20:07:11 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/utils/node/Node_Daemon.h:

          Put define guards in the wrong location.

Thu Dec 20 18:17:42 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/utils/node/Node_Daemon.h:

          Fixed compilation error with ACE 6.1.4 or higher.

Mon Dec 10 23:16:11 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * ChangeLogs/ChangeLog-1_0_4:

          Tagging Changelog